started board layout

--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 
 <body>
 
+    <h1 id="title"> Simon Game </h1>
+
+    <div class="container">
+        <div class="circle">
+            <div class="btn green">
+            </div>
+            <div class="btn red">
+            </div>
+            <div class="btn yellow">
+            </div>
+            <div class="btn blue">
+            </div>
+
+        </div>
+
+    </div>
 
 
 </body>
