--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Simon Game</title>
+    <!-- -->
+    <link rel="shortcut icon" href="assets/images/icon.ico">
 </head>
 
 <body>
